--- a/my-personal-blog/_config.yml
+++ b/my-personal-blog/_config.yml
@@ -21,9 +21,7 @@
 title: Your awesome title
 email: shannon.bentley@brewcity-innovations.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+This blog documents my journey learning software development through hands-on projects, real debugging sessions, and the moments where concepts finally click. Rather than rehashing definitions, I focus on how ideas show up in practice—what I tried, what broke, and what I’m still actively figuring out.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
