--- a/my-personal-blog/_config.yml
+++ b/my-personal-blog/_config.yml
@@ -24,7 +24,7 @@ description: This blog documents my journey learning software development throug
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username:  shay90210
+# github_username:  shay90210
 
 # Build settings
 theme: minima
